Ajout de l'icone

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="keywords" content="HTML, CSS">
         <meta name="author" content="Hugo Goorickx">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./imgs/2.png">
+
 		<link href="assets/style.css" rel="stylesheet">
 		<title>
 			Sunnyside agency landing page
